@@ -82,9 +82,11 @@ accept them all, save to window title
 option to pass through to xterm window when switching window
 
 -- For 0.4 --------------------------------------------------------------------
-- document status-left/status-right/status-interval
 - test and fix wsvt25
 - clear EOL etc CANNOT rely on term using the current colour/attr and probably
   should not emulate it doing so
 - activity/bell should be per-window not per-link? what if it is cur win in
   session not being watched?
+- document status-left/status-right/status-interval
+- enhance paste buffers. per-session buffers, lots of command love
+
